<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UWan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
  <string name="favorite_btn_delete">删除</string>
  <string name="dislike_dlg_lable_speech">读文章</string>
  <string name="download">离线缓存</string>
  <string name="label_cancel_dislike">撤消</string>
  <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
  <string name="city_category_list_header">点击选择其他城市</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="subscribe_more_category">更多频道</string>
      <string name="subscribe_add_category">自定义频道</string>
        <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="search_hint">输入关键词</string>
    <string name="news_ch">新闻</string>
    <string name="news_en">News</string>
        <string name="local_ch">本地</string>
    <string name="local_en">Local</string>
          <string name="collect_ch">收藏</string>
    <string name="collect_en">Collect</string>
        <string name="information_ch">消息</string>
    <string name="information_en">Message</string>
      <string name="option_ch">设置</string>
    <string name="option_en">Option</string>
    <string name="record_ch">记录</string>
    <string name="record_en">Record</string>
    <string name="new_channel">自定义频道</string>
</resources>
