<?xml version="1.0" encoding="UTF-8"?>

  <LinearLayout  
       xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_content"
android:layout_width="240dp"
    android:layout_height="match_parent"
     android:layout_gravity="start"
        android:gravity="center"
        android:background="@color/black"
    android:orientation="vertical" >
   
        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:background="@color/choose_blue" >
        <RelativeLayout
            android:id="@+id/rl_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_title"
                style="@style/draw_icon"
                android:background="@drawable/ico_news"/>
            <TextView 
                android:id="@+id/tv_title_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_title"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_title"
                android:text="@string/news_ch"/>
            <TextView
                android:id="@+id/tv_title_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_title_ch"
                android:layout_below="@+id/tv_title_ch"
                android:text="@string/news_en"
                />
         
            </RelativeLayout>
            </RelativeLayout>
            
        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:background="@color/drawer_login"
            >
        <LinearLayout
            android:id="@+id/ll_login"
               android:orientation="horizontal"  
            android:layout_width="fill_parent"
             android:layout_height="40.0dip"
             android:layout_centerInParent="true"
            >
             <ImageView
                android:id="@+id/iv_blink1"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                />
               <ImageButton
                android:id="@+id/ib_qq"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                 android:background="@drawable/ico_qq"
                />
                <ImageView
                android:id="@+id/iv_blink2"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                />
                     <ImageButton
                android:id="@+id/ib_weibo"
                android:layout_height="40dp"
                android:layout_width="0dp"
                 android:layout_weight="1.0"
                 android:background="@drawable/ico_weibo"
                />
                         <ImageView
                android:id="@+id/iv_blink3"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                />
                        <ImageButton
                android:id="@+id/ib_weibo"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                 android:background="@drawable/ico_sina"
                />
                                      <ImageView
                android:id="@+id/iv_blink4"
                android:layout_height="40dp"
                 android:layout_width="0dp"
                 android:layout_weight="1.0"
                />
        </LinearLayout>
            </RelativeLayout>
        
            <RelativeLayout
            android:id="@+id/rl_local"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            >
              <RelativeLayout
            android:id="@+id/rl_local2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_locol"
                style="@style/draw_icon"
                android:background="@drawable/ico_local"/>
            <TextView 
                android:id="@+id/tv_locol_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_locol"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_locol"
                android:text="@string/local_ch"/>
            <TextView
                android:id="@+id/tv_locol_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_locol_ch"
                android:layout_below="@+id/tv_locol_ch"
                android:text="@string/local_en"
                />
         
            </RelativeLayout>
            </RelativeLayout>
            
                    <RelativeLayout
            android:id="@+id/rl_collect"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            >
               <RelativeLayout
            android:id="@+id/rl_collect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_collect"
                style="@style/draw_icon"
                android:background="@drawable/ico_collect"/>
            <TextView 
                android:id="@+id/tv_collect_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_collect"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_collect"
                android:text="@string/collect_ch"/>
            <TextView
                android:id="@+id/tv_locol_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_collect_ch"
                android:layout_below="@+id/tv_collect_ch"
                android:text="@string/collect_en"
                />
         
            </RelativeLayout>
            </RelativeLayout>
       
            
              <RelativeLayout
            android:id="@+id/rl_information"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            >     
              <RelativeLayout
            android:id="@+id/rl_information2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_information"
                style="@style/draw_icon"
                android:background="@drawable/ico_information"/>
            <TextView 
                android:id="@+id/tv_information_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_information"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_information"
                android:text="@string/information_ch"/>
            <TextView
                android:id="@+id/tv_information_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_information_ch"
                android:layout_below="@+id/tv_information_ch"
                android:text="@string/information_en"
                />
         
            </RelativeLayout>
               
            </RelativeLayout>
            
                      <RelativeLayout
            android:id="@+id/rl_option"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            >
                <RelativeLayout
            android:id="@+id/rl_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_option"
                style="@style/draw_icon"
                android:background="@drawable/ico_option"/>
            <TextView 
                android:id="@+id/tv_option_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_option"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_option"
                android:text="@string/option_ch"/>
            <TextView
                android:id="@+id/tv_option_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_option_ch"
                android:layout_below="@+id/tv_option_ch"
                android:text="@string/option_en"
                />
         
            </RelativeLayout>
            </RelativeLayout>
            
                <RelativeLayout
            android:id="@+id/rl_record"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            >
                    <RelativeLayout
            android:id="@+id/rl_record2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             >
            <ImageButton
                android:id="@+id/iv_record"
                style="@style/draw_icon"
                android:background="@drawable/ico_record"/>
            <TextView 
                android:id="@+id/tv_record_ch"
                style="@style/draw_title_text"
                android:layout_toRightOf="@+id/iv_record"
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/iv_record"
                android:text="@string/record_ch"/>
            <TextView
                android:id="@+id/tv_record_en"
               style="@style/draw_title_affiliate_text"
                android:layout_alignLeft="@+id/tv_record_ch"
                android:layout_below="@+id/tv_record_ch"
                android:text="@string/record_en"
                />
         
            </RelativeLayout>
            </RelativeLayout>
            
             <RelativeLayout
            android:id="@+id/rl_other"
            android:layout_width="match_parent"
            android:layout_height="40.0dip"
            android:layout_weight="2.0"
            >
            </RelativeLayout>
            
            
    </LinearLayout>
